--- a/my-portfolio/public/index.html
+++ b/my-portfolio/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Greg Metcalf is a graduate of Full Sail University with a degree in computer science for web design and development. He specializes in front-end work with user interfaces, user experiences and is capable of setting up a backend with API and database connections"
     />
+    <meta name="keywords" content="web designer, web developer, react developer, react, pool, billiards, database, user interface, user experience, front-end, front end, greg metcalf" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
